# sentinal-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Enterprise_RAG_Architecture.md  Enterprise_RAG_Database_Design.md  Enterprise_RAG_Deployment.md  Enterprise_RAG_Folder_Structure.md  Enterprise_RAG_PRD.md  LICENSE  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yml  ci.yml  security.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  lifecycle.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: evaluations.py  health.py  query.py  roles.py  tenants.py  users.py
apps/api/app/core/: auth.py  config.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/repositories/: __init__.py  base.py  budgets.py  evaluations.py  permissions.py  roles.py  tenants.py  users.py
apps/api/app/middleware/: error_handler.py  request_context.py
apps/api/app/schemas/: common.py  query.py  roles.py  tenants.py  users.py
apps/api/app/services/: cost_service.py  evaluation_service.py  rag_orchestrator.py  role_service.py  tenant_service.py  user_service.py
apps/api/tests/integration/: conftest.py  test_repositories.py  test_retrieval_rbac.py  test_rls_tenant_isolation.py
apps/api/tests/unit/: test_audit_dual_write.py  test_cost_service.py  test_evaluation_regressions.py  test_health.py  test_jwt_verifier.py
apps/evaluation-service/: pyproject.toml
apps/evaluation-service/sentinelrag_evaluation_service/: __init__.py  main.py
apps/evaluation-service/tests/unit/: test_service_app.py
apps/frontend/: .env.example  Dockerfile  README.md  biome.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx  providers.tsx
apps/frontend/src/app/audit/: page.tsx
apps/frontend/src/app/collections/: page.tsx
apps/frontend/src/app/dashboard/: page.tsx
apps/frontend/src/app/documents/: page.tsx
apps/frontend/src/app/evaluations/: page.tsx
apps/frontend/src/app/prompts/: page.tsx
apps/frontend/src/app/query-playground/: page.tsx
apps/frontend/src/app/settings/: page.tsx
apps/frontend/src/app/usage/: page.tsx
apps/frontend/src/components/layout/: page-header.tsx  sidebar.tsx  status-badge.tsx  topbar.tsx
apps/frontend/src/components/query/: query-form.tsx  trace-viewer.tsx
apps/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  pill.tsx  stat.tsx  table.tsx  textarea.tsx
apps/frontend/src/lib/: api-types.ts  api.ts  auth.ts  use-api-client.ts  use-trace-stream.ts  utils.ts
apps/frontend/tests/e2e/: collections.spec.ts  query-playground.spec.ts  smoke.spec.ts
apps/frontend/tests/unit/: api.test.ts
apps/ingestion-service/: pyproject.toml
apps/retrieval-service/: pyproject.toml
apps/temporal-worker/: Dockerfile  pyproject.toml
apps/temporal-worker/sentinelrag_worker/activities/: evaluation.py
apps/temporal-worker/sentinelrag_worker/workflows/: evaluation.py
docs/architecture/: PHASE_PLAN.md
docs/architecture/adr/: 0000-template.md  0001-monorepo-uv-workspace.md  0002-python-tooling.md  0003-pgvector-hnsw.md  0004-postgres-fts-over-opensearch.md  0005-litellm-gateway.md  0006-bge-reranker.md  0007-temporal-over-celery.md  0008-keycloak-auth.md  0009-rest-not-grpc.md  0010-layered-hallucination-detection.md  0011-multi-cloud-strategy.md  0012-helm-argocd-deployment.md  0013-unstructured-parsing.md  0014-hybrid-llm-strategy.md  0015-raw-text-in-object-storage.md  0016-immutable-audit-dual-write.md  0017-frontend-nextjs-app-router.md  0018-feature-flags-unleash.md  0019-evaluation-framework-ragas.md  0021-retrieval-embedded-v1.md  0022-cost-budgets-soft-hard-caps.md  README.md
docs/operations/runbooks/: deployment_guid_summary.md
infra/observability/grafana/dashboards/: cost-tenant.json  quality.json  rag-overview.json
k8s/: api-deployment.yaml  frontend-deployment.yaml  otel-collector.yaml  service-account.yaml  temporal-frontend-deployment.yaml  temporal-worker-deployment.yaml
migrations/: alembic.ini  env.py
migrations/versions/: 0001_extensions.py  0002_tenancy_rbac.py  0003_collections.py  0004_documents.py  0005_ingestion_jobs.py  0006_prompts.py  0007_query_traces.py  0008_evaluation.py  0009_audit_usage_partitioned.py  0010_rls_policies.py  0012_tenant_budgets.py
scripts/db/init/: 01_extensions.sql
scripts/local/keycloak/: realm-export.json
scripts/local/observability/: grafana-dashboards.yml  otel-collector-config.yaml  prometheus.yml
