[project]
name = "sentinelrag"
version = "0.1.0"
description = "SentinelRAG — multi-tenant, RBAC-aware, evaluation-driven enterprise RAG platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "SentinelRAG contributors" }]

# This top-level project is the workspace root. It has no source code itself;
# each service / package below is a workspace member with its own pyproject.toml.

[tool.uv]
# The root is a workspace controller, not a deployable package — don't try
# to build it. Each workspace member has its own buildable [project] table.
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/retrieval-service",
    "apps/ingestion-service",
    "apps/evaluation-service",
    "apps/temporal-worker",
    "packages/sentinelrag-sdk/python",
    "packages/shared/python",
]

# PEP 735 dependency groups. `uv sync` installs the `dev` group by default.
# To install ALL workspace members in editable mode for testing, use
# `uv sync --all-packages` (wired into the Makefile `install` target).
[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.7",
    "httpx>=0.27",
    "respx>=0.21",
    "pre-commit>=3.8",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0.36",
    "pgvector>=0.3.6",
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43.0",
    "email-validator>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "migrations/versions",
    "**/node_modules",
    "**/.next",
]

[tool.ruff.lint]
# Strong but pragmatic lint set. Enable explicitly so future additions are deliberate.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type-annotation hygiene)
    "S",   # bandit (security)
    "A",   # builtins shadowing
    "C4",  # comprehensions
    "DTZ", # datetime-zoneinfo
    "T20", # print/pprint
    "PT",  # pytest style
    "RET", # return statements
    "SIM", # simplify
    "TID", # tidy imports
    "PL",  # pylint subset
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "ANN401", # disallow Any (we sometimes need it at boundaries)
    "PLR0913", # too many arguments — services have legitimate reasons
    "S101",   # assert in pytest is fine
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S",     # tests do unsafe things on purpose
    "ANN",   # annotation strictness relaxed in tests
    "PLR2004", # magic numbers in tests
]
"**/migrations/**/*.py" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["apps", "packages"]
exclude = [
    "**/.venv",
    "**/node_modules",
    "**/.next",
    "**/migrations/versions",
    "**/__pycache__",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
# These are pragmatic relaxations until the codebase is fully typed.
# Tighten over time.

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["apps", "packages", "tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
markers = [
    "unit: fast in-memory tests",
    "integration: tests using real infra (containers, network)",
    "contract: cross-service contract tests",
    "e2e: full end-to-end tests",
    "slow: long-running tests",
]

[tool.coverage.run]
branch = true
source = ["apps", "packages"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
