[project]
name = "sentinelrag-evaluation-service"
version = "0.1.0"
description = "Evaluation framework: ragas + custom evaluators, regression testing."
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "ragas>=0.2",
    "datasets>=3.1",
    "structlog>=24.4",
    "temporalio>=1.8",
    "sentinelrag-shared",
]

[tool.uv.sources]
sentinelrag-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinelrag_evaluation_service"]
