[project]
name = "sentinelrag-temporal-worker"
version = "0.1.0"
description = "Temporal workflow + activity workers for ingestion, evaluation, batch jobs."
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    "temporalio>=1.8",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "structlog>=24.4",
    "sentinelrag-shared",
]

[tool.uv.sources]
sentinelrag-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
